# regret

./: .gitignore  Cargo.toml  build.gradle.kts  design.md  jitpack.yml  justfile  regret.proto  settings.gradle.kts
.github/workflows/: build-push.yml  oxia-candidate-test.yml  regret-candidate-test.yml  release-sdk.yml
adapters/oxia-java/: Dockerfile  build.gradle.kts  pom.xml
charts/regret/: values.yaml
charts/regret/templates/: clusterrole.yaml  service.yaml  statefulset.yaml  studio-deployment.yaml
pilot/: Cargo.toml  Dockerfile  go.mod  go.sum  main.go  pilot.go
pilot/adapter/: grpc.go
pilot/api/: adapters.go  auth.go  chaos.go  errors.go  generators.go  health.go  hypothesis.go  metrics.go  models.go  router.go
pilot/chaos/: actions.go  events.go  registry.go  types.go  workflow.go
pilot/cmd/: pilot.go  root.go
pilot/database/: sqlite.go
pilot/database/migrations/: 002_adapter_metrics.sql  003_adapter_config_yaml.sql  004_chaos_workflows.sql
pilot/endpoints/: adapter_config.go  adapters.go  auth.go  chaos.go  errors.go  generators.go  health.go  hypothesis.go  metrics.go  models.go  router.go
pilot/engine/: events.go  executor.go  manager.go  scraper.go
pilot/eventlog/: eventlog.go
pilot/ext/: env.go  json.go  ptr.go  time.go
pilot/generator/: builtins.go  cas.go  generator.go  kv.go  types.go
pilot/migrations/: 001_init.sql  002_adapter_metrics.sql
pilot/proto/: regret.go  regret.pb.go  regret.proto  regret_grpc.pb.go
pilot/reference/: kv.go  model.go  pebble.go  store.go
pilot/src/: app_state.rs  config.rs  grpc.rs  main.rs  types.rs
pilot/src/adapter/: grpc_client.rs  mod.rs  registry.rs
pilot/src/api/: adapters.rs  auth.rs  chaos.rs  error.rs  generators.rs  health.rs  hypothesis.rs  metrics.rs  mod.rs  models.rs  profiles.rs
pilot/src/chaos/: actions.rs  events.rs  executor.rs  mod.rs  types.rs
pilot/src/engine/: events.rs  executor.rs  hypothesis_manager.rs  metrics_scraper.rs  mod.rs
pilot/src/generator/: cas.rs  generators.rs  kv.rs  mod.rs  profiles.rs  types.rs
pilot/src/reference/: kv.rs  mod.rs  streaming.rs
pilot/src/scheduler/: k8s.rs
pilot/src/storage/: files.rs  mod.rs  rocks.rs  sqlite.rs
pilot/storage/: files.go  pebble.go  pebble_impl.go  sqlite.go
pilot/storage/migrations/: 001_init.sql
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
scripts/: regret-ci.sh  setup-cluster.sh
sdk/java/: .gitignore  build.gradle.kts  pom.xml
sdk/java/src/main/proto/: regret.proto
studio/: Dockerfile  package-lock.json  package.json
studio/src/app/: layout.tsx  page.tsx
studio/src/app/adapters/: page.tsx
studio/src/app/benchmark/: page.tsx
studio/src/app/generators/: page.tsx
studio/src/app/hypotheses/: page.tsx
studio/src/app/runs/: page.tsx
studio/src/app/templates/: page.tsx
studio/src/components/: sidebar.tsx  status-badge.tsx  top-nav.tsx  topbar.tsx
studio/src/lib/: api.ts
(+28 files in other folders)
