[package]
name = "regret-pilot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "regret-pilot"
path = "src/main.rs"

[dependencies]
regret-proto = { path = "../proto" }
regret-gen-core = { path = "../gen/core" }

# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rocksdb = "0.22"

# Kubernetes
kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Async
tokio = { workspace = true }
tokio-util = "0.7"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = "0.13"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
zip = "2"
rand = "0.8"
